packages/typ/tests/fixtures/diagnostics/0178_adt_tuple_constructor_mismatch_05.ml.infer.expected
File "0178_adt_tuple_constructor_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0178_adt_tuple_constructor_mismatch_05 is not a valid module name.

File "0178_adt_tuple_constructor_mismatch_05.ml", line 2, characters 36-40:
2 | let _ : rec_epsilon = Pair_epsilon (true, 4)
                                        ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
