packages/typ/tests/fixtures/diagnostics/0178_adt_tuple_constructor_mismatch_05.ml
type rec_epsilon = Pair_epsilon of int * bool
let _ : rec_epsilon = Pair_epsilon (true, 4)
